# mermaid-forge

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
packaging/arch/: PKGBUILD  mermaid-forge.desktop
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AlignmentToolbar.tsx  Canvas.tsx  CodeEditor.tsx  CodeMode.tsx  CodePanel.tsx  ImportDialog.tsx  Inspector.tsx  MermaidView.tsx  Modal.tsx  Palette.tsx  PreviewPanel.tsx  RightPanel.tsx  TemplateGallery.tsx  Toolbar.tsx
src/components/nodes/: GroupNode.tsx  ShapeNode.tsx
src/mermaid/: autoLayout.ts  detect.ts  generate.ts  groups.ts  helperLines.ts  layout.ts  nodeCatalog.ts  parse.ts  templates.ts
src/services/: export.ts  files.ts  recent.ts
src/store/: useStore.ts
src/styles/: global.css
