[package]
name = "mermaid-forge"
version = "0.1.1"
description = "A beautiful, professional visual editor for Mermaid diagrams"
authors = ["russus87"]
license = "MIT"
repository = "https://github.com/russus87/mermaid-forge"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "mermaid_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
